--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 								<li>openEO workflows</li>
 								<li>openEO in practice</li>
 							</ul>
-							<li>Demo notebook</li>
+							<li>Demo notebooks</li>
 							<li>How to make use of openEO yourself</li>
 						</ul>
 					</section>
@@ -219,7 +219,7 @@
 								<li>openEO workflows</li>
 								<li>openEO in practice</li>
 							</ul>
-							<li>Demo notebook</li>
+							<li>Demo notebooks</li>
 							<li>How to make use of openEO yourself</li>
 						</ul>						
 					</section>
@@ -346,7 +346,7 @@
 							<li>openEO workflows</li>
 							<li>openEO in practice</li>
 						</ul>
-						<li>Demo notebook</li>
+						<li>Demo notebooks</li>
 						<li>How to make use of openEO yourself</li>
 					</ul>
 				</section>
@@ -414,7 +414,7 @@
 							<li style="color: cyan">openEO workflows</li>
 							<li>openEO in practice</li>
 						</ul>
-						<li>Demo notebook</li>
+						<li>Demo notebooks</li>
 						<li>How to make use of openEO yourself</li>
 					</ul>
 				</section>
@@ -572,7 +572,7 @@
 							<li>openEO workflows</li>
 							<li style="color: cyan">openEO in practice</li>
 						</ul>
-						<li>Demo notebook</li>
+						<li>Demo notebooks</li>
 						<li>How to make use of openEO yourself</li>
 					</ul>
 				</section>
@@ -748,16 +748,17 @@
 							<li>openEO workflows</li>
 							<li>openEO in practice</li>
 						</ul>
-						<li style="color: cyan">Demo notebook</li>
+						<li style="color: cyan">Demo notebooks</li>
 						<li>How to make use of openEO yourself</li>
 					</ul>
 				</section>
 
-<!-- 				<section data-background-iframe="https://nbviewer.jupyter.org/github/carljv/Will_it_Python/blob/master/ARM/ch5/arsenic_wells_switching.ipynb"> 
- -->
-<!-- 				<section data-background-iframe="https://nbviewer.jupyter.org/github/eo4geocourses/VITO_Parcel-Delineation/blob/master/jupyter_notebook/Openeo%20basics.ipynb">
+				<section data-background-iframe="https://nbviewer.jupyter.org/github/eo4geocourses/VITO_Parcel-Delineation/blob/master/jupyter_notebook/Openeo%20basics.ipynb">
 				</section>
- -->
+
+				<section data-background-iframe="https://nbviewer.jupyter.org/github/eo4geocourses/VITO_Parcel-Delineation/blob/master/jupyter_notebook/Parcel%20delineation.ipynb">
+				</section>
+
 
 				<section>
 					<h1>Table of contents</h1>
@@ -774,7 +775,7 @@
 							<li>openEO workflows</li>
 							<li>openEO in practice</li>
 						</ul>
-						<li>Demo notebook</li>
+						<li>Demo notebooks</li>
 						<li style="color: cyan">How to make use of openEO yourself</li>
 					</ul>
 				</section>
