fixing some issues with images and metadata

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta charset="utf-8">
 		 
 		<title>Delineating agricultural parcels using AI</title>
-		<meta property="dc:title" content="Delineating agricultural parcels using AI" />
+		<meta property="dc:title" content="Delineating agricultural parcels using deep learning" />
 		<meta property="dc:creator" content="VITO - Vlaamse Instelling voor Technologisch Onderzoek" /> 
 		<meta property="dc:publisher" content="VITO - Vlaamse Instelling voor Technologisch Onderzoek" /> 
 		<meta property="dc:subject" content="openEO, EO4GEO, Deep Learning, Parcel delineation, UNet, Satellite, Earth Observation" />
@@ -21,12 +21,12 @@
 							     openEO in practice;
 							     UNet in openEO: notebook;
 							     Using openEO yourself; />
-		<meta property="dc:description" content="Learning outcomes: Understand remote sensing workflow from image acquisition to image segmentation within openEO; Learn about the capabilities of openEO platform; Understand how a UNet works and how it can be implemented;" /> 
+		<meta property="dc:description" content="Learning outcomes: Understand remote sensing workflow from image acquisition to image segmentation within openEO; Learn about the capabilities of openEO platform; Understand how a UNet works and how it can be implemented;" />
 		<meta property="dc:contributor" content="Bart Driessen" />
 		<meta property="dc:contributor" content="Jeroen Dries" />
 		<meta property="dc:contributor" content="Kasper Bonte" />
 		<meta property="dc:contributor" content="Kristof van Tricht" />
-		<meta property="dc:created" content="2021-05-20" />
+		<meta property="dc:created" content="2022-05-20" />
 		<meta property="dc:type" content="teaching material" /> 
 		<meta property="dc:format" content="html" />
 		<meta property="dc:language" content="EN" />
@@ -213,7 +213,8 @@
 							<li>Know how a U-Net works and why it was developed</li>
 							<li>Know about recent developments in distributed computing and why they are necessary</li>
 							<li>Be familiar with basic and more complex operations in openEO</li>
-							<li>Be able to do inference of pretrained U-Net models yourself</li>
+							<li>Be able to do inference of pre-trained U-Net models yourself</li>
+							<li>Be able to do delineate agricultural parcels</li>
 						</ul>
 
 
@@ -417,7 +418,7 @@
 						<h1>Postprocessing</h1>
 						<div class="row">
 							<div class="column">
-								<img src="resources/p1_datascience/segmentation.PNG">
+								<img src="resources/p1_datascience/segmentation.png">
 							</div>
 							<div class="column">
 								<br>
