fixing some issues with images

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
 					<section>
 						<h1>UNet architecture</h1>
-						<img src="resources/p1_datascience/unet.png" style="height: 65vh;">
+						<img src="resources/p1_datascience/unet.png">
 						<br>
 						<citation>(Ronneberger et al., 2015)</citation>
 					</section>
@@ -340,7 +340,7 @@
 
 					<section>
 						<h1>Overlap strategy: mirroring</h1>
-						<img src="resources/p1_datascience/mirroring.png" style="height: 55vh;">
+						<img src="resources/p1_datascience/mirroring.png">
 						<br>
 						<citation>(Ronneberger et al., 2015)</citation>
 					</section>
