fixing image sizes

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 					<section>
 						<h1><a href="https://bok.eo4geo.eu/IP3-6">Convolution</a></h1>
-						<img src="resources/p1_datascience/convolution.png" style="padding: 1em; background-color: white; height: 55vh">
+						<img src="resources/p1_datascience/convolution.png" style="padding: 1em; background-color: white; width: 60%;height: 60%">
 						<br>
 						<citation>(Basavarajaiah, 2019)</citation>
 					</section>
@@ -282,7 +282,8 @@
 					<section>
 						<h1>More complex CNN's</h1>
 						Still are composites of these basic operations
-						<img src="resources/p1_datascience/inception_v3.png" style="padding: 1em; background-color: white; height: 55vh">
+						<img src="resources/p1_datascience/inception_v3.png" style="padding: 1em; background-color: white; width: 75%;height: 75%">
+						<br>
 						<citation>(Szegedy et al., 2016)</citation>
 					</section>
 
@@ -327,7 +328,7 @@
 
 					<section>
 						<h1>UNet architecture</h1>
-						<img src="resources/p1_datascience/unet.png">
+						<img src="resources/p1_datascience/unet.png" style="width: 80%;height: 80%">
 						<br>
 						<citation>(Ronneberger et al., 2015)</citation>
 					</section>
@@ -340,7 +341,7 @@
 
 					<section>
 						<h1>Overlap strategy: mirroring</h1>
-						<img src="resources/p1_datascience/mirroring.png">
+						<img src="resources/p1_datascience/mirroring.png" style="width: 80%;height: 80%">
 						<br>
 						<citation>(Ronneberger et al., 2015)</citation>
 					</section>
@@ -360,7 +361,7 @@
 
 					<section>
 						<h1>This UNet implementation</h1>
-						<img src="resources/p1_datascience/simplified_unet.png">
+						<img src="resources/p1_datascience/simplified_unet.png" style="width: 80%;height: 80%">
 					</section>
 
 				</section>
@@ -418,7 +419,7 @@
 						<h1>Postprocessing</h1>
 						<div class="row">
 							<div class="column">
-								<img src="resources/p1_datascience/segmentation.png">
+								<img src="resources/p1_datascience/segmentation.png" style="width: 80%;height: 80%">
 							</div>
 							<div class="column">
 								<br>
@@ -466,7 +467,7 @@
 				<section id="EO">
 					<section>
 						<h1>Traditional workflow</h1>
-						<img src="resources/p2_computerscience/traditional.jpg" style="height: 65vh">
+						<img src="resources/p2_computerscience/traditional.jpg" style="width: 75%;height: 75%">
 						<br>
 						<citation>(Dove et al., 2015)</citation>
 					</section>
@@ -491,7 +492,7 @@
 						<br>
 						Various backends can be accessed through openEO using same client side syntax
 						<br><br>
-						<img style="padding: .5em; background-color: white; height: 50vh;" src="resources/p2_computerscience/openeo_api.jpg">
+						<img style="padding: .5em; background-color: white; width: 75%;height: 75%"" src="resources/p2_computerscience/openeo_api.jpg">
 						<br>
 						<citation>openEO (20222)</citation>
 					</section>
@@ -702,11 +703,11 @@
 					<div class="row docrow">
 						<div class="column doccol">
 							<a href="https://docs.openeo.cloud/getting-started/python/#installation">Basic documentation</a>
-							<img src="resources/p2_computerscience/doc1.png">
+							<img src="resources/p2_computerscience/doc1.png" style="width: 80%;height: 80%">
 						</div>
 						<div class="column doccol">
 							<a href="https://open-eo.github.io/openeo-python-client/">Advanced documentation</a>
-							<img src="resources/p2_computerscience/doc2.png">
+							<img src="resources/p2_computerscience/doc2.png" style="width: 80%;height: 80%">
 						</div>
 					</div>
 				</section>
@@ -773,7 +774,7 @@
 				<section id="EO">
 					<section>
 						<h1>Filtering theory</h1>
-						<img style="padding:  0 3em; background-color: white" src="resources/p2_computerscience/filtering.png">
+						<img style="padding:  0 3em; background-color: white; width: 50%; height: 50%" src="resources/p2_computerscience/filtering.png">
 					</section>
 					<section>
 						<h1 style="margin-bottom: 1em;">Filtering in practice</h1>
