--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 								<p>ECMWF Agera5</p>
 								<br>
 								<br>
-								<p><a href="https://docs.openeo.cloud/data-collections/">Full collection overview</a></p>
+								<p><a href="https://docs.openeo.cloud/data-collections/">Click here for the complete list of available collections.</a></p>
 							</div>
 							<div class="column nospacing">
 								<p><strong>Coming up:</strong></p>
@@ -592,7 +592,7 @@
 									<li>Merging cubes</li>
 								</ul>
 								<br><br><br>
-								<p><a href="https://docs.openeo.cloud/processes/">Full list of supported processes</a></p>
+								<p><a href="https://docs.openeo.cloud/processes/">Click here for the complete list of supported processes.</a></p>
 							</div>
 							<div class="column nospacing">
 								<ul>
@@ -622,8 +622,8 @@
 							<li>Train a model locally in your own environment, own GPU's, etc.</li>
 							<li>Apply your model using a UDF (see next slide)</li>
 						</ul><br><br>
-						<p><a href="https://open-eo.github.io/openeo-python-client/cookbook/sampling.html?highlight=filter_spatial">Click here for the documentation on feature sampling using filter_spatial.</a></p>
-						<p><a href="https://github.com/openEOPlatform/SRR2_notebooks/blob/main/UC3%20-%20Crop%20type%20feature%20engineering%20using%20random%20forest.ipynb">Click here for a code example of sampling using filter_spatial and applying model using UDF.</a></p>
+						<a href="https://open-eo.github.io/openeo-python-client/cookbook/sampling.html?highlight=filter_spatial">Click here for the documentation on feature sampling using filter_spatial.</a>
+						<a href="https://github.com/openEOPlatform/SRR2_notebooks/blob/main/UC3%20-%20Crop%20type%20feature%20engineering%20using%20random%20forest.ipynb">Click here for a code example of sampling using filter_spatial and applying model using UDF.</a>
 					</section>
 
 					<section>
